Finishing touches - renamed some CSS tags to something more accurate

--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,7 @@ h1 {
   box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
 } */
 
-.empty {
+.resultsMessage {
   width: 100%;
   margin-top: 3rem;
 
@@ -99,7 +99,7 @@ h1 {
   align-items: center;
 }
 
-.empty h2 {
+.resultsMessage h2 {
   font-size: 1.25rem;
   color: #f9d3b4;
   font-family: var(--font-raleway);
